--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -6,6 +6,7 @@
 
     <!-- Required for 29+. -->
     <uses-permission android:name="android.permission.ACTIVITY_RECOGNITION" />
+    <uses-permission android:name="android.permission.POST_NOTIFICATIONS"/>
 
     <application
         android:allowBackup="true"
@@ -33,8 +34,8 @@
 
         <receiver
             android:name=".ActivityTransitionReceiver"
-            android:exported="false"
-            android:permission="com.google.android.gms.permission.ACTIVITY_RECOGNITION">
+            android:exported="true"
+            android:permission="com.permission.ACTIVITY_RECOGNITION">
             <intent-filter>
                 <action android:name="com.example.calculator.ACTION_PROCESS_ACTIVITY_TRANSITIONS"/>
             </intent-filter>
