--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,11 +2,13 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools">
 
-    <uses-permission android:name="com.google.android.gms.permission.ACTIVITY_RECOGNITION" />
+    <!--<uses-permission android:name="com.google.android.gms.permission.ACTIVITY_RECOGNITION" />-->
 
     <!-- Required for 29+. -->
     <uses-permission android:name="android.permission.ACTIVITY_RECOGNITION" />
     <uses-permission android:name="android.permission.POST_NOTIFICATIONS"/>
+    <uses-permission android:name="android.permission.RECEIVE_BOOT_COMPLETED" />
+    <uses-permission android:name="android.permission.SYSTEM_ALERT_WINDOW" />
 
     <application
         android:allowBackup="true"
@@ -32,14 +34,15 @@
                 android:value="" />
         </activity>
 
-        <receiver
+        <!--<receiver
             android:name=".ActivityTransitionReceiver"
+            android:enabled="true"
             android:exported="true"
             android:permission="com.permission.ACTIVITY_RECOGNITION">
             <intent-filter>
-                <action android:name="com.example.calculator.ACTION_PROCESS_ACTIVITY_TRANSITIONS"/>
+                <action android:name="com.example.calculatorTRANSITIONS_RECEIVER_ACTION"/>
             </intent-filter>
-        </receiver>
+        </receiver>-->
 
     </application>
 
