--- a/app/build.gradle
+++ b/app/build.gradle
@@ -52,7 +52,11 @@ dependencies {
     androidTestImplementation 'androidx.test.ext:junit:1.1.5'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.5.1'
 
-    implementation "com.google.android.gms:play-services-location:21.0.1"
     implementation 'androidx.localbroadcastmanager:localbroadcastmanager:1.1.0'
 
+    implementation 'com.squareup.okhttp3:okhttp:4.10.0'
+
+    implementation 'com.squareup.retrofit2:retrofit:2.9.0'
+    implementation 'com.squareup.retrofit2:converter-gson:2.5.0'
+    implementation 'com.squareup.picasso:picasso:2.71828'
 }
